# bb-depends-dot

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-and-test.yml  build-release.yml
bbrd/: main.cpp
bbrd/bbrd/: Dependencies.h  DependencyGraph.cpp  DependencyGraph.h  ErrorOutput.cpp  ErrorOutput.h  File.cpp  File.h  ProgramOptions.cpp  ProgramOptions.h  Version.cpp.in  Version.h
ragel/: Dependencies.cpp  Dependencies.cpp.rl  dot-machine.rl
scripts/github-actions/: build-static-bb-depends-dot.sh  install-static-boost.sh
test/: CMakeLists.txt  test.cpp
